Bug 168191 - Incorrect labels of X-Axis while creating charts in Calc and Impress in 25.8. Resets to correct labels after reopening saved file.
Summary: Incorrect labels of X-Axis while creating charts in Calc and Impress in 25.8....
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
25.8.0.4 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0 target:25.8.2
Keywords: bibisected, bisected, regression
: 168257 168295 (view as bug list)
Depends on:
Blocks: Chart-Labels
  Show dependency treegraph
 
Reported: 2025-08-30 04:27 UTC by Anshuman Pandey
Modified: 2025-09-06 20:30 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Anshuman Pandey 2025-08-30 04:27:37 UTC
Description:
Impress Issue: I am not able to change the x-axis labels in Impress. Using the data table when I try to change the name of the rows from Row1 to New Row1, the changes don't get reflected at all. The updates in the Column names work fine.
Calc Issue: When I am using numeric values x-axis (e.g., year) and I select "First column as label", instead of having the values provided as x-axis it takes 1,2,3,...
Both these issues get resolved when you save the file as an ODP/ODS and reopen the file.

Steps to Reproduce:
In Impress:
1. Insert > Chart. A Chart appears on the slide
2. View > Data Table. The data table dialog box appears.
3. Change categories from "Row 1" to "New Row 1" or any other name of your choice
4. Notice that the Row labels don't change.
5. Change the Column Names from "Column 1" to "New Column 1" or any other name of your choice
6. Notice that the Column Name changes as expected
BUG: Look at the new chart's x-axis labels.

In Calc: 
1. Add the below information in the spreadhseet
Year	Sales (Mn)
2021	55
2022	65
2023	100
2024	125

2. Highlight the 2x5 set of data.

3. Insert > Chart.

4. In the "3. Data Range" step, set:

Data series in columns = ON

First row as label = ON

First column as label = ON

5. Press "Finish" button.

BUG: Look at the new chart's x-axis labels.

Finally: Save both Calc and Impress files and reopen them to see that they have the right values

Actual Results:
For the Impress Chart: The x-axis labels remain Row 1, Row 2, etc.

For Calc Chart: it shows x-axis labels of:

1 | 2 | 3 | 4

Expected Results:
For the Impress Chart: x-axis labels: New Row 1 | New Row 2| New Row 3| New Row 4
For Calc Chart: x-axis labels : 2021 | 2022 | 2023 | 2024


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 25.8.1.1 (X86_64)
Build ID: 54047653041915e595ad4e45cccea684809c77b5
CPU threads: 4; OS: Linux 6.16; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 m_a_riosv 2025-08-30 09:39:33 UTC
Reproducible
Version: 25.8.1.0.0+ (X86_64) / LibreOffice Community
Build ID: 1e040b72222012f9a5f1e47d19aaf0c0369e08ad
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded

In Calc while creating the chart, after selecting 'First column label', going back to the type and selecting 'Net' and again 'Columns' make it fine.
Comment 2 Anshuman Pandey 2025-08-30 13:19:41 UTC
(In reply to m_a_riosv from comment #1)
> Reproducible
> Version: 25.8.1.0.0+ (X86_64) / LibreOffice Community
> Build ID: 1e040b72222012f9a5f1e47d19aaf0c0369e08ad
> CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render:
> Skia/Vulkan; VCL: win
> Locale: es-ES (es_ES); UI: en-US
> Calc: CL threaded
> 
> In Calc while creating the chart, after selecting 'First column label',
> going back to the type and selecting 'Net' and again 'Columns' make it fine.

That's a very good catch, I checked that 'Net' type or a 'Pie' chart both reset the chart and it becomes fine. 
I applied the same method for Impress, of course the exact steps are a little different, I changed the chart type from the sidebar and again if changed to 'Net' or 'Pie' chart the chart resets and we have the correct axis labels.
Comment 3 Buovjaga 2025-08-30 15:37:30 UTC
(In reply to Anshuman Pandey from comment #0)
> Steps to Reproduce:
> In Impress:
> 1. Insert > Chart. A Chart appears on the slide
> 2. View > Data Table. The data table dialog box appears.
> 3. Change categories from "Row 1" to "New Row 1" or any other name of your
> choice
> 4. Notice that the Row labels don't change.
> 5. Change the Column Names from "Column 1" to "New Column 1" or any other
> name of your choice
> 6. Notice that the Column Name changes as expected
> BUG: Look at the new chart's x-axis labels.

Bibisected with linux-64-25.8 to eeb8ca44ac7994c0552749e190a193a44c956769
tdf#147874 slow sheet switching with large chart2 (2)
Comment 4 Tex2002ans 2025-08-31 00:11:47 UTC
And here was the original thread where this issue first got brought up:

- https://www.reddit.com/r/libreoffice/comments/1n39sca/trouble_with_the_xaxis_of_charts_in_calc_and/

- - -

I was reproduce in this version too:

Version: 25.8.0.4 (X86_64)
Build ID: 48f00303701489684e67c38c28aff00cd5929e67
CPU threads: 8; OS: Windows 11 X86_64 (build 22631); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 5 Commit Notification 2025-09-02 13:47:46 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/423f95aa13165c2c11c2314d43b8cb1d331b5af0

tdf#168191 Incorrect labels of X-Axis in chart

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-09-03 12:54:29 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/fe0f5564f4755272a79334418346ecb21282649a

tdf#168191 Incorrect labels of X-Axis in chart

It will be available in 25.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Mateusz Wlazłowski 2025-09-06 18:18:58 UTC
*** Bug 168295 has been marked as a duplicate of this bug. ***
Comment 8 Buovjaga 2025-09-06 20:30:48 UTC
*** Bug 168257 has been marked as a duplicate of this bug. ***