tdf#168191 Incorrect labels of X-Axis in chart

revert
    commit eeb8ca44ac7994c0552749e190a193a44c956769
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Fri Apr 4 10:02:06 2025 +0200
    tdf#147874 slow sheet switching with large chart2 (2)

Change-Id: I67dcea417be01982b769dd2bea387b4d29f0e732
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190520
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins